src/test/ui/hygiene/fields.stderr
error: struct `foo::S` is private
  --> $DIR/fields.rs:15:17
   |
LL |         let s = S { x: 0 };
   |                 ^^^^^^^^^^ private
...
LL |     let s = foo::m!(S, x);
   |             ------------- in this macro invocation

error: struct `foo::S` is private
  --> $DIR/fields.rs:17:17
   |
LL |         let _ = s.x;
   |                 ^ private
...
LL |     let s = foo::m!(S, x);
   |             ------------- in this macro invocation

error: struct `foo::T` is private
  --> $DIR/fields.rs:20:17
   |
LL |         let t = T(0);
   |                 ^^^^ private
...
LL |     let s = foo::m!(S, x);
   |             ------------- in this macro invocation

error: struct `foo::T` is private
  --> $DIR/fields.rs:22:17
   |
LL |         let _ = t.0;
   |                 ^ private
...
LL |     let s = foo::m!(S, x);
   |             ------------- in this macro invocation

error: aborting due to 4 previous errors

